[package]
name = "opener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sjm = { git = "https://github.com/mvo5/sjm-rs" }
